sample-project/packages/core/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>A request for field service work raised by an account contact.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>