sample-project/packages/core/main/default/objects/Service_Request__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND( NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)), NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;)), NOT(ISBLANK(Due_Date__c)), Due_Date__c &lt; TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>