sample-project/packages/core/main/default/objects/Service_Request__c/fields/Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Requested_On__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Requested On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>