sample-project/packages/core/main/default/objects/Service_Request__c/validationRules/Due_Date_Not_Before_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Not_Before_Request</fullName>
    <active>true</active>
    <description>A due date earlier than the request date is always a data-entry error.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Due_Date__c)), NOT(ISBLANK(Requested_On__c)), Due_Date__c &lt; Requested_On__c )</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be earlier than Requested On.</errorMessage>
</ValidationRule>